# wmi

./: AUTHORS  BUGS  CONTRIB  ChangeLog  FAQ  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  action.cpp  action.h  actions.cpp  actions.h  atoms.cpp  atoms.h  bar.cpp  bar.h  binder.cpp  binder.h  box.cpp  box.h  client.cpp  client.h  clientbar.cpp  clientbar.h  config.h  config.h.in  config.mk  configure  configure.ac  container.h  cursors.cpp  cursors.h  draw.cpp  draw.h  (+64 more)
examples/: statustext-deleuze.sh  statustext-gavin.sh  statustext.sh
examples/session-managers/: kdm-entry
examples/themes/: accent-theme.conf  flat-cyan-theme.conf  flat-grey-theme.conf  gold-theme.conf  laotse-theme.conf  lunatic-theme.conf  peacock-theme.conf
man/: Makefile.am  Makefile.in  actions.conf.5  common.conf.5  session.conf.5  theme.conf.5  wmi.1  wmiremote.1
src/: Makefile.am  Makefile.in
