bin_PROGRAMS = wmi wmiremote
wmiremote_SOURCES = wmiremote.cpp
wmi_SOURCES = action.h \
action.cpp \
actions.h \
actions.cpp \
atoms.h \
atoms.cpp \
bar.h \
bar.cpp \
binder.h \
binder.cpp \
box.h \
box.cpp \
client.h \
client.cpp \
container.h \
cursors.h \
cursors.cpp \
draw.h \
draw.cpp \
expander.cpp \
expander.h \
float.h \
float.cpp \
clientbar.h \
clientbar.cpp \
font.h \
font.cpp \
frame.h \
frame.cpp \
inputbar.h \
inputbar.cpp \
kernel.h \
kernel.cpp \
label.h \
label.cpp \
launcher.h \
launcher.cpp \
loader.h \
loader.cpp \
logger.h \
logger.cpp \
main.cpp \
menu.h \
menu.cpp \
monitor.h \
monitor.cpp \
prompt.h \
prompt.cpp \
rectangle.h \
rectangle.cpp \
shortcut.h \
shortcut.cpp \
singleton.h \
slot.cpp \
slot.h \
split.h \
split.cpp \
statusbar.h \
statusbar.cpp \
theme.h \
theme.cpp \
thing.h \
thing.cpp \
tree.h \
tree.cpp \
util.h \
util.cpp \
wmi.h \
validators.h \
validators.cpp \
widget.h \
widget.cpp \
workspace.h \
workspace.cpp \
xcore.h \
xcore.cpp \
xfont.h \
xfont.cpp \
xftfont.h \
xftfont.cpp
wmi_LDADD = @LDFLAGS@
wmiremote_LDADD = @LDFLAGS@
